bugfix for null value of int or float